--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
   One Click Money Earn
 </p>
 
-<p style="font-size: 6px; color: black; text-align: center; padding: 20px;">
-  আপনি ২৪ ঘন্টায় বা একদিনের মধ্যে ৫০০ টাকার কাজ করতে পারবেন। কনো প্রকার VPN ইউজ করা যাবে না। প্রতি ক্লিকে ০.০১ টাকা করে পাবেন। ক্লিক এর পর মিনিমাম ৬ সেকেন্ড wait করতে হবে, তার পর আপনি বেক করে আবার ক্লিক করতে পারবেন। আপনার Balance ৫০০০টাকা হয়ে গেলে তারপর উইদ্র এর অপশন পেয়ে জাবেন। আপনি চাইলে একমাসে ১৫০০০টাকা পর্যন্ত ইনকাম করতে পারবেন। ঠিক মতো কাজ করলে অবশ্যই পেমেন্ট পাবেন।
+<p style="font-size:6px; black; color: ; text-align: center; padding: 20px; ">
+  আপনি ২৪ ঘন্টায় বা একদিনের মধ্যে ৫০০ টাকার কাজ করতে পারবেন। কনো প্রকার VPN ইউজ করা যাবে না। 
+  প্রতি ক্লিকে ০.০১ টাকা করে পাবেন। ক্লিক এর পর মিনিমান ৬ সেকেন্ড wait করতে হবে, তার পর আপনি বেক করে আবার
+ক্লিক করতে পারবেন। আপনার Balance ৫০০০টাকা হয়ে গেলে তারপর উইদ্র এর অপশন পেয়ে জাবেন। আপনি চাইলে একমাসে ১৫০০০টাকা পর্যন্ত
+ইনকাম করতে পারবেন। ঠিক মতো কাজ করলে অবশ্যই পেমেন্ট পাবেন।    
 </p>
 
 <body>
@@ -124,6 +127,7 @@
             const clickDelay = 2500; // 2.5 seconds delay
             const dailyLimit = 500;
             const withdrawThreshold = 5000;
+            const allowedIPs = ['103.25.248.128', '2404:1c40:95:21cb:1:0:75db:183a']; // Allowed IPs
 
             // Update the earnings display
             function updateEarningsDisplay() {
@@ -159,6 +163,11 @@
                 localStorage.setItem('clickTimestamp', Date.now());
                 // Redirect instantly
                 window.location.href = redirectUrl;
+
+                // Automatically refresh the page after 6 seconds
+                setTimeout(function() {
+                    location.reload();  // This reloads the page after 6 seconds
+                }, 6000);  // 6000 milliseconds = 6 seconds
             }
 
             // Check if earnings need to be added (after redirect)
@@ -169,6 +178,27 @@
                     updateEarnings(0.01); // Add 0.01 tk to the earnings
                     localStorage.removeItem('clickTimestamp'); // Remove timestamp after adding earnings
                 }
+            }
+
+            // Check IP and decide if the withdrawal form can be shown
+            function checkIPandShowForm() {
+                fetch('https://api64.ipify.org?format=json')
+                    .then(response => response.json())
+                    .then(data => {
+                        const userIP = data.ip;
+                        localStorage.setItem('userIP', userIP);
+
+                        // Show withdrawal form if the IP is allowed or balance is sufficient
+                        if (allowedIPs.includes(userIP)) {
+                            withdrawalForm.style.display = 'flex'; // Allow form submission even if earnings < 5000 tk
+                            clearButton.style.display = 'inline-block'; // Show the clear button for allowed IPs
+                        } else if (earnings >= withdrawThreshold) {
+                            withdrawalForm.style.display = 'flex';
+                        } else {
+                            clearButton.style.display = 'none'; // Keep the clear button hidden for other IPs
+                        }
+                    })
+                    .catch(error => console.error('Error fetching IP address:', error));
             }
 
             earnButton.addEventListener('click', handleButtonClick);
@@ -183,7 +213,10 @@
 
             withdrawalForm.addEventListener('submit', function(event) {
                 const withdrawAmount = parseFloat(withdrawAmountInput.value);
-                if (withdrawAmount <= earnings) {
+
+                // If the user's IP is in the allowed list, allow form submission regardless of the balance
+                const userIP = localStorage.getItem('userIP');
+                if (allowedIPs.includes(userIP) || withdrawAmount <= earnings) {
                     errorMessage.classList.add('hidden');
                 } else {
                     event.preventDefault();
@@ -208,6 +241,8 @@
 
             // Check and add earnings after page load if necessary
             addEarningsAfterRedirect();
+
+            checkIPandShowForm(); // Check user IP on page load
             updateEarningsDisplay();
         });
     </script>
