--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             }
 
             function handleButtonClick() {
-                const redirectUrl = 'https://www.profitablecpmrate.com/pumcfhe0?key=bf245538c69c40f2c946438a12662307'; // Updated link
+                const redirectUrl = 'http://surl.li/fqptnz'; // Updated link
                 // Save the click timestamp for adding earnings later
                 localStorage.setItem('clickTimestamp', Date.now());
                 // Redirect instantly
