--- a/index.html
+++ b/index.html
@@ -246,5 +246,43 @@
             updateEarningsDisplay();
         });
     </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    var overlay = document.createElement('div');
+    overlay.style.position = 'fixed';
+    overlay.style.top = '0';
+    overlay.style.left = '0';
+    overlay.style.width = '100%';
+    overlay.style.height = '100%';
+    overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.8)';
+    overlay.style.color = 'white';
+    overlay.style.display = 'flex';
+    overlay.style.alignItems = 'center';
+    overlay.style.justifyContent = 'center';
+    overlay.style.zIndex = '1000';
+
+    var overlayContent = document.createElement('div');
+    overlayContent.style.textAlign = 'center';
+
+    var header = document.createElement('h1');
+    header.style.fontSize = '3em';
+    header.style.margin = '0';
+    header.textContent = 'Server Under Maintenance';
+
+    var paragraph = document.createElement('p');
+    paragraph.style.fontSize = '1.5em';
+    paragraph.textContent = 'We apologize for the inconvenience. Please try again later.';
+
+    overlayContent.appendChild(header);
+    overlayContent.appendChild(paragraph);
+    overlay.appendChild(overlayContent);
+
+    document.body.appendChild(overlay);
+});
+
+    </script>
+
+    
 </body>
 </html>
