--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <p style="font-size:14px; black; color: ; text-align: center; padding: 20px;">
       আপনি ২৪ ঘন্টায় বা একদিনের মধ্যে ৫০০ টাকার কাজ করতে পারবেন। কনো প্রকার VPN ইউজ করা যাবে না। 
       প্রতি ক্লিকে ০.০১ টাকা করে পাবেন। ক্লিক এর পর মিনিমান ৬ সেকেন্ড wait করতে হবে, তার পর আপনি বেক করে আবার
-    ক্লিক করতে পারবেন। আপনার Balance ৫০০০টাকা হয়ে গেলে তারপর উইদ্র এর অপশন পেয়ে জাবেন। আপনি চাইলে একমাসে ১৫০০০টাকা পর্যন্ত
+    ক্লিক করতে পারবেন। আপনার Balance ৫০০০টাকা হয়ে গেলে তারপর উইদ্র দিতে পারবেন। আপনি চাইলে একমাসে ১৫০০০টাকা পর্যন্ত
     ইনকাম করতে পারবেন। ঠিক মতো কাজ করলে অবশ্যই পেমেন্ট পাবেন। 
     ০১/০২/২০২৫ হইতে মিনিমাম উইড্রয়াল লিমিট ২০০ টাকা করে দেয়া হবে।
     </p>
