--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <button id="earn-button">Click to Earn</button>
     <p id="earnings">Earnings: 0.00 tk</p>
-    <button id="clear-button" style="display: ;">Clear Earnings</button>
+    <button id="clear-button" style="display:none;">Clear Earnings</button>
 
     <!-- Overlay background -->
 <div id="overlay"></div>
